# libui_win

./: .gitignore  CMakeLists.txt  README.md  descriptor.rc  manifest.res
inc/: simple_menu.h
inc/adapters/: application.h  battery_meter_adapter.h  context_adapter.h  joystick_adapter.h  screen_adapter.h
src/: main.cpp  simple_menu.cpp
src/adapters/: application.cpp  battery_meter_adapter.cpp  context_adapter.cpp  joystick_adapter.cpp  screen_adapter.cpp
